Update webhook handler to handle profiles

--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -24,7 +24,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btns" type="submit">{% trans 'Sign Out' %}</button>
+  <button class="btns mb-3" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
