--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -30,9 +30,36 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-10 offset-1">
-                <h4 class="text-center">Order History</h4>
-                {{ orders }}
+        <div class="col-lg-8 offset-lg-2 col-md-12">
+            <h4 class="text-center mb-3">Order History</h4>
+            <div class="table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th>Order Number</th>
+                            <th>Date</th>
+                            <th>Items</th>
+                            <th>Order Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'order_history' order.order_number %}"
+                                    title="{{ order.order_number }}">{{ order.order_number|truncatechars:6 }}
+                                    </a>
+                                </td>
+                                <td>{{ order.date }}</td>
+                                {% for item in order.lineitems.all %}
+                                <td>{{ item.product.name }} x{{ item.quantity }}</td>
+                                {% endfor %}
+                                <td>£{{ order.grand_total }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
