--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -26,7 +26,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="btns" type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btns mb-3" type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
 {% endblock %}
