--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -37,7 +37,11 @@
     <div class="row">
         <div class="col-3 text-center">
             <p>{{ item.product.name }}</p>
-            <img src="{{ item.product.image.url }}" class="img-fluid w-25" alt="">
+            {% if item.product.image %}
+            <img class="img-fluid w-25" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+            {% else %}
+            <img class="img-fluid w-25" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+            {% endif %}
         </div>
         <div class="col-2 my-auto text-center">
             <p>£{{ item.product.price }}</p>
@@ -47,33 +51,33 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <div class="row">
-                    <div class="input-group col-6 offset-3">
-                        <div class="input-group-prepend">
-                            <button class="decrement-qty btn" 
-                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                                <span>
-                                    <i class="fas fa-minus fa-sm"></i>
-                                </span>
-                            </button>
+                        <div class="input-group col-6 offset-3">
+                            <div class="input-group-prepend">
+                                <button class="decrement-qty btn" data-item_id="{{ item.item_id }}"
+                                    id="decrement-qty_{{ item.item_id }}">
+                                    <span>
+                                        <i class="fas fa-minus fa-sm"></i>
+                                    </span>
+                                </button>
+                            </div>
+                            <input class="form-control form-control-sm qty_input" type="number" name="quantity"
+                                value="{{ item.quantity }}" min="1" max="4" data-item_id="{{ item.item_id }}"
+                                id="id_qty_{{ item.item_id }}">
+                            <div class="input-group-append">
+                                <button class="increment-qty btn" data-item_id="{{ item.item_id }}"
+                                    id="increment-qty_{{ item.item_id }}">
+                                    <span>
+                                        <i class="fas fa-plus fa-sm"></i>
+                                    </span>
+                                </button>
+                            </div>
                         </div>
-                        <input class="form-control form-control-sm qty_input" type="number"
-                            name="quantity" value="{{ item.quantity }}" min="1" max="4"
-                            data-item_id="{{ item.item_id }}"
-                            id="id_qty_{{ item.item_id }}">
-                        <div class="input-group-append">
-                            <button class="increment-qty btn"
-                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                                <span>
-                                    <i class="fas fa-plus fa-sm"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
                     </div>
                     <div class="row">
                         <div class="col-6 offset-3">
-                            <a class="update-link text-info"><small>Update</small></a> 
-                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                            <a class="update-link text-info"><small>Update</small></a>
+                            <a class="remove-item text-danger float-right"
+                                id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </div>
                     </div>
                 </div>
@@ -103,8 +107,7 @@
     </div>
     <div class="row">
         <div class="col-5 offset-7 mt-3">
-            <a href="{% url 'products' %}"
-                class="btn btn-outline-black rounded-0 btn-lg">
+            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
                 <span class="icon">
                     <i class="fas fa-chevron-left"></i>
                 </span>
@@ -119,16 +122,16 @@
         </div>
     </div>
     <div class="row">
-    <div class="col">
-    {% else %}
-        <p class="lead mb-5">Your cart is empty.</p>
-        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-            <span class="icon">
-                <i class="fas fa-chevron-left"></i>
-            </span>
-            <span class="text-uppercase">Keep Shopping</span>
-        </a>
-    {% endif %}
+        <div class="col">
+            {% else %}
+            <p class="lead mb-5">Your cart is empty.</p>
+            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
+            {% endif %}
         </div>
     </div>
 </div>
