--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -9,6 +9,11 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-4 offset-4 pb-3">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1">
             <h4>Add Product</h4>
             <form method="POST" action="{% url 'add_product' %}" class="" enctype="multipart/form-data">
