--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,9 @@
     {% endblock %}
 
     {% block corecss %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" 
-        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -29,7 +30,8 @@
 
     {% block corejs %}
     <script src="https://kit.fontawesome.com/65dede8dbe.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
@@ -52,131 +54,137 @@
 
 <body class="home-page">
     <header class="fixed-top">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{{ MEDIA_URL }}vision-logo.png" class="logo-image" alt="..."></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'products' %}">All Products</a>
-                    </li>
-                    <li class="nav-item dropdown position-static">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Shop By Room
-                        </a>
-                        <ul class="dropdown-menu w-100 horizontal-dropdown" aria-labelledby="navbarDropdown">
-                            <div class="dropdown-item">
-                                <div class="row">
-                                    <div class="col d-flex justify-content-center"><a class="shadow-none" href="{% url 'products' %}?room=bed_room">Bedroom</a>
-                                    </div>
-                                    <div class="col d-flex justify-content-center"><a class="shadow-none" href="{% url 'products' %}?room=dining_room">Dining Room</a>
-                                    </div>
-                                    <div class="col d-flex justify-content-center"><a class="shadow-none" href="{% url 'products' %}?room=bath_room">Bathroom</a>
-                                    </div>
-                                    <div class="col d-flex justify-content-center"><a class="shadow-none" href="{% url 'products' %}?room=living_room">Living Room</a>
-                                    </div>
-                                    <div class="col d-flex justify-content-center"><a class="shadow-none" href="{% url 'products' %}?room=kitchen">Kitchen</a>
-                                    </div>
-                                    <div class="col d-flex justify-content-center"><a class="shadow-none" href="{% url 'products' %}?room=office">Office</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{{ MEDIA_URL }}vision-logo.png"
+                        class="logo-image" alt="..."></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'products' %}">All Products</a>
+                        </li>
+                        <li class="nav-item dropdown position-static">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Shop By Room
+                            </a>
+                            <ul class="dropdown-menu w-100 horizontal-dropdown" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-item">
+                                    <div class="row">
+                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
+                                                href="{% url 'products' %}?room=bed_room">Bedroom</a>
+                                        </div>
+                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
+                                                href="{% url 'products' %}?room=dining_room">Dining Room</a>
+                                        </div>
+                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
+                                                href="{% url 'products' %}?room=bath_room">Bathroom</a>
+                                        </div>
+                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
+                                                href="{% url 'products' %}?room=living_room">Living Room</a>
+                                        </div>
+                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
+                                                href="{% url 'products' %}?room=kitchen">Kitchen</a>
+                                        </div>
+                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
+                                                href="{% url 'products' %}?room=office">Office</a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </ul>
-                    </li>
-                    {% include 'includes/mobile-top-header.html' %}
-                </ul>
-            </div>
-            <div class="d-none d-lg-block">
-            <form method="GET" action="{% url 'products' %}" class="d-flex">
-                <div class="input-group w-100">
-                    <input class="form-control me-2" type="text" name="q" placeholder="What is your Vision?"
-                        aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="form-control btn btn-outline-success bg-white" type="submit">
-                            <span class="icon"><i class="fas fa-search"></i></span>
-                        </button>
-                    </div>
+                            </ul>
+                        </li>
+                        {% include 'includes/mobile-top-header.html' %}
+                    </ul>
                 </div>
-            </form>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-black d-none d-lg-block">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item">
-                        <a class="nav-link"
-                            href="">
-                            <div class="text-center text-black">
-                                <div><i class="far fa-heart fa-lg"></i></div>
-                                <p class="my-0">
-                                    Favorites
-                                </p>
+                <div class="d-none d-lg-block">
+                    <form method="GET" action="{% url 'products' %}" class="d-flex">
+                        <div class="input-group w-100">
+                            <input class="form-control me-2" type="text" name="q" placeholder="What is your Vision?"
+                                aria-label="Search">
+                            <div class="input-group-append">
+                                <button class="form-control btn btn-outline-success bg-white" type="submit">
+                                    <span class="icon"><i class="fas fa-search"></i></span>
+                                </button>
                             </div>
-                        </a>
-                    </li>
-                    <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="far fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
-                            <a href="" class="dropdown-item">Product Management</a>
-                            {% endif %}
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
                         </div>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="{% url 'view_cart' %}">
-                            <div class="text-center text-black">
-                                <div><i class="fas fa-shopping-cart fa-lg"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %}
-                                    £{{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                    £0.00
-                                    {% endif %}
-                                </p>
+                    </form>
+                </div>
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-black d-none d-lg-block">
+                    <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                        <li class="list-inline-item">
+                            <a class="nav-link" href="">
+                                <div class="text-center text-black">
+                                    <div><i class="far fa-heart fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Favorites
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="list-inline-item dropdown">
+                            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                <div class="text-center">
+                                    <div><i class="far fa-user fa-lg"></i></div>
+                                    <p class="my-0">My Account</p>
+                                </div>
+                            </a>
+                            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                                {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                {% endif %}
                             </div>
-                        </a>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                                href="{% url 'view_cart' %}">
+                                <div class="text-center text-black">
+                                    <div><i class="fas fa-shopping-cart fa-lg"></i></div>
+                                    <p class="my-0">
+                                        {% if grand_total %}
+                                        £{{ grand_total|floatformat:2 }}
+                                        {% else %}
+                                        £0.00
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    {% include 'includes/searchbar.html' %}
-</header>
+        </nav>
+        {% include 'includes/searchbar.html' %}
+    </header>
 
     {% if messages %}
-        <div class="message-container">
-            {% for message in messages %}
-                {% with message.level as level %}
-                    {% if level == 40 %}
-                        {% include 'includes/toasts/toast_error.html' %}
-                    {% elif level == 30 %}
-                        {% include 'includes/toasts/toast_warning.html' %}
-                    {% elif level == 25 %}
-                        {% include 'includes/toasts/toast_success.html' %}
-                    {% else %}
-                        {% include 'includes/toasts/toast_info.html' %}
-                    {% endif %}
-                {% endwith %}
-            {% endfor %}
-        </div>
+    <div class="message-container">
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+        {% endwith %}
+        {% endfor %}
+    </div>
     {% endif %}
 
     {% block page_header %}
@@ -186,19 +194,20 @@
     {% endblock %}
 
     <footer>
-    <div class="container-fluid bg-light footer-style">
-        <div class="row">
-            <div class="col col-lg-4 social-icons">
-                <a href="https://twitter.com/" target="_blank"><i class="fab fa-facebook-square "></i></a>
-                <a class="insta" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            </div>
-            <div class="col col-lg-4 offset-md-4 text-right my-auto help-btn-padding">
-                <button class="btns help-btn-style">Need Help? <i class="fas fa-bullhorn"></i></button>
+        <div class="container-fluid bg-light footer-style">
+            <div class="row">
+                <div class="col col-lg-4 social-icons">
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-facebook-square "></i></a>
+                    <a class="insta" href="https://www.instagram.com/" target="_blank"><i
+                            class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                </div>
+                <div class="col col-lg-4 offset-md-4 text-right my-auto help-btn-padding">
+                    <button class="btns help-btn-style">Need Help? <i class="fas fa-bullhorn"></i></button>
+                </div>
             </div>
         </div>
-    </div>
-</footer> 
+    </footer>
 
     {% block postloadjs %}
     <script type="text/javascript">
@@ -206,7 +215,7 @@
     </script>
     {% endblock %}
 
-    
-</body>
-</html>
 
+</body>
+
+</html>
