--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -15,13 +15,13 @@
     </div>
     <div class="row">
         <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1">
-            <h4>Add Product</h4>
-            <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
+            <h4>Edit Product</h4>
+            <form method="POST" action="{% url 'edit_product' product.id %}" class="" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-center">
                     <a class="btns" href="{% url 'products' %}">Cancel</a>
-                    <button class="btns mb-3" type="submit">Add Product</button>
+                    <button class="btns mb-3" type="submit">Update Product</button>
                 </div>
             </form>
         </div>
