--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1">
             <h4>Edit Product</h4>
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_product' product.id %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-center">
@@ -26,6 +26,5 @@
             </form>
         </div>
     </div>
-
 
     {% endblock %}
