--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -31,31 +31,37 @@
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <button class="decrement-qty btn" data-item_id="{{ product.id }}"
+                                                id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="5"
-                                            data-item_id="{{ product.id }}"
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="5" data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <button class="increment-qty btn" data-item_id="{{ product.id }}"
+                                                id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
                                             </button>
-                                        </div>                                    
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            
-                            <button type="submit" class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
+
+                            <button type="submit" class="btns">Add to cart <i
+                                    class="fas fa-shopping-cart fa-lg"></i></button>
                             <div class="col-12">
+                                {% if request.user.is_superuser %}
+                                <small class="text-center">
+                                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                </small>
+                                {% endif %}
                                 <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
@@ -67,11 +73,11 @@
                         </div>
                     </form>
                     <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
-                    
+
                 </div>
-                
+
             </div>
-            
+
         </div>
     </div>
 </div>
