--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -18,7 +18,13 @@
             <h4>Add Product</h4>
             <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy }}
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div class="text-center">
                     <a class="btns" href="{% url 'products' %}">Cancel</a>
                     <button class="btns mb-3" type="submit">Add Product</button>
@@ -27,4 +33,14 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
