--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -19,16 +19,13 @@
         <div class="col-3 text-center">
             <p>Product Info</p>
         </div>
-        <div class="col-2 text-center">
+        <div class="col-3 text-center">
             <p>Price</p>
         </div>
         <div class="col-3 text-center">
             <p>Quantity</p>
         </div>
-        <div class="col-2 text-center">
-            <p>Delivery</p>
-        </div>
-        <div class="col-2 text-center">
+        <div class="col-3 text-center">
             <p>Total</p>
         </div>
     </div>
@@ -43,7 +40,7 @@
             <img class="img-fluid w-25" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
             {% endif %}
         </div>
-        <div class="col-2 my-auto text-center">
+        <div class="col-3 my-auto text-center">
             <p>£{{ item.product.price }}</p>
         </div>
         <div class="col-3 my-auto justify-content-center">
@@ -83,17 +80,17 @@
                 </div>
             </form>
         </div>
-        <div class="col-2 my-auto text-center">
-            <p>£{{ item.product.delivery_cost }}</p>
-        </div>
-        <div class="col-2 my-auto text-center">
+        <div class="col-3 my-auto text-center">
             <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
         </div>
     </div>
     <hr>
     {% endfor %}
     <div class="row">
-        <div class="col-2 offset-8 text-center">
+        <div class="col-2 offset-6 text-center delivery-link">
+            <a href=""><h6>See our delivery policy</h6></a>
+        </div>
+        <div class="col-2 text-center">
             <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
         </div>
         <div class="col-2 text-center">
