Add favorites app, urls and template

--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,7 @@
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-black d-none d-lg-block">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                         <li class="list-inline-item">
-                            <a class="nav-link" href="">
+                            <a class="nav-link" href="{% url 'view_favorites' %}">
                                 <div class="text-center text-black">
                                     <div><i class="far fa-heart fa-lg"></i></div>
                                     <p class="my-0">
