--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -82,6 +82,7 @@
         </div>
     </div>
 </div>
+<!-- Move to top button -->
 <div class="up-btn shadow-sm border border-black bg-white">
     <a class="upbtn-link d-flex h-100">
         <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
