--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,6 +1,6 @@
 
 <li class="list-inline-item d-lg-none">
-    <a class="nav-link" href="">
+    <a class="nav-link" href="{% url 'view_favorites' %}">
         <div class="text-center text-black">
             <div><i class="far fa-heart fa-lg"></i></div>
             <p class="my-0">
@@ -23,7 +23,7 @@
         {% if request.user.is_superuser %}
         <a href="{% url 'add_product' %}" class="dropdown-item">Product Administration</a>
         {% endif %}
-        <a href="" class="dropdown-item">My Profile</a>
+        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
         {% else %}
         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
