--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -74,7 +74,7 @@
                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                         </small>
                         {% endif %}
-                        <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
+                        <div class="fav-icon"><a href=""><i class="far fa-heart fa-lg"></i></a></div>
                     </div>
                 </div>
                 {% endfor %}
