--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -71,7 +71,13 @@
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form>
-                    <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
+                    <form class="form" action="{% url 'add_to_favorites' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" data-item_id="{{ product.id }}">
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        <button type="submit">Add to favorites</button>
+                    </form>
+                    <!-- <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div> -->
                 </div>
             </div>
         </div>
