--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,6 @@
 
     <title>Vision Furniture {% block extra_title %}{% endblock %}</title>
 </head>
-
 <body class="home-page">
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -195,14 +194,14 @@
 
     <footer>
         <div class="container-fluid bg-light footer-style">
-            <div class="row">
-                <div class="col col-lg-4 social-icons">
+            <div class="row h-100">
+                <div class="col-4 social-icons my-auto">
                     <a href="https://twitter.com/" target="_blank"><i class="fab fa-facebook-square "></i></a>
                     <a class="insta" href="https://www.instagram.com/" target="_blank"><i
                             class="fab fa-instagram-square"></i></a>
                     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
                 </div>
-                <div class="col col-lg-4 offset-md-4 text-right my-auto help-btn-padding">
+                <div class="col-2 offset-6 my-auto">
                     <button class="btns help-btn-style">Need Help? <i class="fas fa-bullhorn"></i></button>
                 </div>
             </div>
