--- a/profiles/templates/profiles/favorites.html
+++ b/profiles/templates/profiles/favorites.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100 nav-padding">
+<div class="container-fluid nav-padding">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="main-heading-padding">Favorites</h2>
@@ -13,36 +13,38 @@
             <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
         </div>
     </div>
-    <div class="row h-100">
+    <div class="row">
         <div class="col-10 offset-1">
-            <div class="row">
-                {% if favorites_items %}
-                {% for item in favorites_items %}
-                <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <div class="card product-box">
-                        {{ favorites_items }}
-                        <a href="{% url 'product_details' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
-                        <a href="{% url 'product_details' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
-                                alt="{{ product.name }}">
-                        </a>
-                        <div class="card-body text-center">
-                            <p>{{ product.name }}</p>
-                            <p>£{{ product.price }}</p>
-                            <a href="{% url 'product_details' product.id %}" class="btns">View Item <i
-                                    class="fas fa-binoculars fa-lg"></i></a>
+            <div class="row h-100">
+                {% if favorites %}
+                    {% for product in favorites %}
+                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                        <div class="card product-box">
+                            {% if product.image %}
+                            <a href="{% url 'product_details' product.id %}">
+                                <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                            </a>
+                            {% else %}
+                            <a href="{% url 'product_details' product.id %}">
+                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                    alt="{{ product.name }}">
+                            </a>
+                            {% endif %}
+                            <div class="card-body text-center">
+                                <p>{{ product.name }}</p>
+                                <p>£{{ product.price }}</p>
+                                <a href="{% url 'product_details' product.id %}" class="btns">View Item <i
+                                        class="fas fa-binoculars fa-lg"></i></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                {% endfor %}
+                    {% endfor %}
                 {% else %}
-                <div class="col-6 offset-3 text-center">
-                    <p>You have no favorites</p>
-                    <a href="{% url 'products' %}" class="btns mb-3">View Products<i
-                            class="fas fa-binoculars fa-lg"></i></a>
-                </div>
+                    <div class="col-6 offset-3 text-center">
+                        <p>You have no favorites</p>
+                        <a href="{% url 'products' %}" class="btns mb-3">View Products<i
+                                class="fas fa-binoculars fa-lg"></i></a>
+                    </div>
                 {% endif %}
             </div>
         </div>
