--- a/templates/base.html
+++ b/templates/base.html
@@ -116,6 +116,7 @@
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-black d-none d-lg-block">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                         <li class="list-inline-item">
+                            {% if request.user.is_authenticated %}
                             <a class="nav-link" href="{% url 'view_favorites' %}">
                                 <div class="text-center text-black">
                                     <div><i class="far fa-heart fa-lg"></i></div>
@@ -124,6 +125,7 @@
                                     </p>
                                 </div>
                             </a>
+                            {% endif %}
                         </li>
                         <li class="list-inline-item dropdown">
                             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
