--- a/templates/base.html
+++ b/templates/base.html
@@ -188,23 +188,21 @@
     </div>
     {% endif %}
 
-    {% block page_header %}
-    {% endblock %}
 
     {% block content %}
     {% endblock %}
 
     <footer>
-        <div class="container-fluid bg-light footer-style">
+        <div class="container-fluid h-100 bg-light footer-style">
             <div class="row h-100">
-                <div class="col-4 social-icons my-auto">
-                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-facebook-square "></i></a>
-                    <a class="insta" href="https://www.instagram.com/" target="_blank"><i
+                <div class="col-7  my-auto">
+                    <a href="https://twitter.com/" class="social-icons" target="_blank"><i class="fab fa-facebook-square "></i></a>
+                    <a class="social-icons" href="https://www.instagram.com/" target="_blank"><i
                             class="fab fa-instagram-square"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.facebook.com/" class="social-icons" target="_blank"><i class="fab fa-twitter-square"></i></a>
                 </div>
-                <div class="col-2 offset-6 my-auto">
-                    <button class="btns help-btn-style">Need Help? <i class="fas fa-bullhorn"></i></button>
+                <div class="col-5 my-auto text-right">
+                    <button class="btns help-btn-style right">Need Help? <i class="fas fa-bullhorn"></i></button>
                 </div>
             </div>
         </div>
