Improve responsiveness on product and favorites pages

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,8 +6,8 @@
 <div class="row h-100 hero-image home-nav-padding">
 <div class="col-4 offset-4 hero-text text-center">
     <h1 class="hero-title">Vision Furniture</h1>
-    <p>Refresh your space</p>
-    <div class="btn-cont" align="center"><a class="btns" href="{% url 'products' %}">View Our Stock</a></div>
+    <p class="refresh">Refresh your space</p>
+    <a class="btns hero-button" href="{% url 'products' %}">View Our Stock</a>
 </div>
 </div>
 </div>
