--- a/profiles/templates/profiles/favorites.html
+++ b/profiles/templates/profiles/favorites.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid nav-padding">
+<div class="container-fluid h-100 nav-padding">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="main-heading-padding">Favorites</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-4 offset-4 pb-3">
+        <div class="col-md-4 offset-md-4 col-6 offset-3 pb-5">
             <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
         </div>
     </div>
@@ -49,5 +49,11 @@
             </div>
         </div>
     </div>
+</div>
+<!-- Move to top button -->
+<div class="up-btn shadow-sm border border-black bg-white">
+    <a class="upbtn-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
 </div>
 {% endblock %}
