Fix UX on allauth templates

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -3,7 +3,7 @@
 {% load cart_tools %}
 
 {% block content %}
-<div class="container-fluid nav-padding">
+<div class="container-fluid min-vh-100 nav-padding">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="main-heading-padding">Shopping Cart</h2>
