--- a/profiles/templates/profiles/favorites.html
+++ b/profiles/templates/profiles/favorites.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100 nav-padding">
+<div class="container-fluid min-vh-100 nav-padding">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="main-heading-padding">Favorites</h2>
