--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<div class="container-fluid">
+<div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
     <div class="col text-center mt-3">
         <h2 class="main-heading-padding">{% trans "Account Inactive" %}</h2>
@@ -18,5 +18,5 @@
     </div>
 </div>
 
-<p>{% trans "This account is inactive." %}</p>
+<p class="text-center">{% trans "This account is inactive." %}</p>
 {% endblock %}
