--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container nav-padding">
+    <div class="container-fluid nav-padding min-vh-100 w-100 p-0">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-6 offset-3">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
