--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid">
+    <div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
     <div class="col text-center mt-3">
         <h2 class="main-heading-padding">{% trans "E-mail Addresses" %}</h2>
@@ -20,12 +20,12 @@
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
-<form action="{% url 'account_email' %}" class="email_list" method="post">
+<form action="{% url 'account_email' %}" class="email_list text-center" method="post">
 {% csrf_token %}
 <fieldset class="blockLabels">
 
   {% for emailaddress in user.emailaddress_set.all %}
-<div class="ctrlHolder">
+<div class="ctrlHolder text-center">
       <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
 
       <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
@@ -41,7 +41,7 @@
 </div>
   {% endfor %}
 
-<div class="buttonHolder">
+<div class="buttonHolder text-center">
       <button class="secondaryAction btns" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
       <button class="secondaryAction btns" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
       <button class="primaryAction btns" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
@@ -51,14 +51,14 @@
 </form>
 
 {% else %}
-<p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
+<p class="text-center"><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
 
 {% endif %}
 
   {% if can_add_email %}
-    <h2>{% trans "Add E-mail Address" %}</h2>
+    <h2 class="text-center">{% trans "Add E-mail Address" %}</h2>
 
-    <form method="post" action="{% url 'account_email' %}" class="add_email">
+    <form method="post" action="{% url 'account_email' %}" class="add_email text-center">
         {% csrf_token %}
         {{ form|crispy }}
         <button name="action_add btns" type="submit">{% trans "Add E-mail" %}</button>
