--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -8,7 +8,7 @@
 
 {% block inner_content %}
 
-<div class="container-fluid">
+<div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
     <div class="col text-center mt-3">
         <h2 class="main-heading-padding">{% trans "Confirm E-mail Address" %}}</h2>
@@ -24,9 +24,9 @@
 
 {% user_display confirmation.email_address.user as user_display %}
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+<p class="text-center">{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+<form method="post" class="text-center" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
     <button class="btns" type="submit">{% trans 'Confirm' %}</button>
 </form>
@@ -35,7 +35,7 @@
 
 {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+<p class="text-center">{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
 {% endif %}
 
