--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid">
+    <div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
     <div class="col text-center mt-3">
         <h2 class="main-heading-padding">{% trans "Change Password" %}</h2>
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    <form method="POST" action="{% url 'account_change_password' %}" class="password_change text-center">
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btns" type="submit" name="action">{% trans "Change Password" %}</button>
