--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,7 +5,7 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid">
+    <div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
     <div class="col text-center mt-3">
         <h2 class="main-heading-padding">{% trans "Change Password" %}</h2>
@@ -16,5 +16,5 @@
         <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
 </div>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <p class="text-center">{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
