--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid">
+    <div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
     <div class="col text-center mt-3">
         <h2 class="main-heading-padding">{% trans "Set Password" %}</h2>
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+    <form method="POST" action="{% url 'account_set_password' %}" class="password_set text-center">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
