Style navbar and improve responsiveness

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100 p-0">
+<div class="container-fluid h-100 p-0 m-0">
 <div class="row h-100 hero-image home-nav-padding">
 <div class="col-4 offset-4 hero-text text-center">
     <h1 class="hero-title">Vision Furniture</h1>
