--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,10 @@
 </head>
 <body class="home-page">
     <header class="fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-style">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}"><img src="{{ MEDIA_URL }}vision-logo.png"
-                        class="logo-image" alt="..."></a>
+                        class="logo-image" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -193,7 +193,7 @@
     {% endblock %}
 
     <footer>
-        <div class="container-fluid h-100 bg-light footer-style">
+        <div class="container-fluid h-100 footer-style">
             <div class="row h-100">
                 <div class="col-7  my-auto">
                     <a href="https://twitter.com/" class="social-icons" target="_blank"><i class="fab fa-facebook-square "></i></a>
