--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -72,10 +72,10 @@
                     </div>
                     <div class="row">
                         <div class="col-3 offset-3 text-center">
-                            <button class="update-link btns btn-sm" type="submit">Update</button>
+                            <button class="update-link btns" type="submit">Update</button>
                         </div>
-                        <div class="col-3 ml-0 text-center">
-                            <a class="remove-item btns btn-sm" id="remove_{{ item.item_id }}">Remove</a>
+                        <div class="col-3 text-center">
+                            <a class="remove-item btns" id="remove_{{ item.item_id }}">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -123,10 +123,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col">
+    <div class="col text-center">
         {% else %}
-        <p class="lead mb-5">Your cart is empty.</p>
-        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+        <p class="lead mb-5 text-center">Your cart is empty.</p>
+        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg text-center">
             <span class="icon">
                 <i class="fas fa-chevron-left"></i>
             </span>
