Fix html validatior div bugs

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -201,4 +201,5 @@
         <a class="btns mt-3 mb-3" href="{% url 'products' %}">Return to shop <i class="fas fa-arrow-left"></i></a>
         {% endif %}
     </div>
+</div>
     {% endblock %}
