--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,22 +7,24 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid min-vh-100 w-100 p-0">
+<div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
-    <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">{% trans "Password Reset" %}</h2>
+        <div class="col text-center mt-3">
+            <h2 class="main-heading-padding">{% trans "Password Reset" %}</h2>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    <div class="row">
+        <div class="col-4 offset-4 pb-5">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
     </div>
-</div>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p class="text-center">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p class="text-center">
+        {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+    </p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset text-center">
         {% csrf_token %}
@@ -30,5 +32,7 @@
         <input class="btns" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
-    <p class="text-center">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="text-center">{% blocktrans %}Please contact us if you have any trouble resetting your
+        password.{% endblocktrans %}</p>
+</div>
 {% endblock %}
