--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -6,56 +6,63 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid min-vh-100 w-100 p-0">
+<div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
-    <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">{% trans "E-mail Addresses" %}</h2>
+        <div class="col text-center mt-3">
+            <h2 class="main-heading-padding">{% trans "E-mail Addresses" %}</h2>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    <div class="row">
+        <div class="col-4 offset-4 pb-5">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
     </div>
-</div>
-{% if user.emailaddress_set.all %}
-<p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
+    {% if user.emailaddress_set.all %}
+    <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
-<form action="{% url 'account_email' %}" class="email_list text-center" method="post">
-{% csrf_token %}
-<fieldset class="blockLabels">
+    <form action="{% url 'account_email' %}" class="email_list text-center" method="post">
+        {% csrf_token %}
+        <fieldset class="blockLabels">
 
-  {% for emailaddress in user.emailaddress_set.all %}
-<div class="ctrlHolder text-center">
-      <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
+            {% for emailaddress in user.emailaddress_set.all %}
+            <div class="ctrlHolder text-center">
+                <label for="email_radio_{{forloop.counter}}"
+                    class="{% if emailaddress.primary %}primary_email{%endif%}">
 
-      <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
+                    <input id="email_radio_{{forloop.counter}}" type="radio" name="email"
+                        {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked" {%endif %}
+                        value="{{emailaddress.email}}" />
 
-{{ emailaddress.email }}
-    {% if emailaddress.verified %}
-    <span class="verified">{% trans "Verified" %}</span>
+                    {{ emailaddress.email }}
+                    {% if emailaddress.verified %}
+                    <span class="verified">{% trans "Verified" %}</span>
+                    {% else %}
+                    <span class="unverified">{% trans "Unverified" %}</span>
+                    {% endif %}
+                    {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
+                </label>
+            </div>
+            {% endfor %}
+
+            <div class="buttonHolder text-center">
+                <button class="secondaryAction btns" type="submit"
+                    name="action_primary">{% trans 'Make Primary' %}</button>
+                <button class="secondaryAction btns" type="submit"
+                    name="action_send">{% trans 'Re-send Verification' %}</button>
+                <button class="primaryAction btns" type="submit" name="action_remove">{% trans 'Remove' %}</button>
+            </div>
+
+        </fieldset>
+    </form>
+
     {% else %}
-    <span class="unverified">{% trans "Unverified" %}</span>
+    <p class="text-center"><strong>{% trans 'Warning:'%}</strong>
+        {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}
+    </p>
+
     {% endif %}
-      {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
-</label>
-</div>
-  {% endfor %}
 
-<div class="buttonHolder text-center">
-      <button class="secondaryAction btns" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction btns" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction btns" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
-</div>
-
-</fieldset>
-</form>
-
-{% else %}
-<p class="text-center"><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
-
-{% endif %}
-
-  {% if can_add_email %}
+    {% if can_add_email %}
     <h2 class="text-center">{% trans "Add E-mail Address" %}</h2>
 
     <form method="post" action="{% url 'account_email' %}" class="add_email text-center">
@@ -63,23 +70,23 @@
         {{ form|crispy }}
         <button name="action_add btns" type="submit">{% trans "Add E-mail" %}</button>
     </form>
-  {% endif %}
+    {% endif %}
+</div>
+    {% endblock %}
 
-{% endblock %}
 
-
-{% block extra_body %}
-<script type="text/javascript">
-(function() {
-  var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
-  var actions = document.getElementsByName('action_remove');
-  if (actions.length) {
-    actions[0].addEventListener("click", function(e) {
-      if (! confirm(message)) {
-        e.preventDefault();
-      }
-    });
-  }
-})();
-</script>
-{% endblock %}
+    {% block extra_body %}
+    <script type="text/javascript">
+        (function () {
+            var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
+            var actions = document.getElementsByName('action_remove');
+            if (actions.length) {
+                actions[0].addEventListener("click", function (e) {
+                    if (!confirm(message)) {
+                        e.preventDefault();
+                    }
+                });
+            }
+        })();
+    </script>
+    {% endblock %}
