--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -7,21 +7,23 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid min-vh-100 w-100 p-0">
+<div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
-    <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">{% trans "Password Reset" %}</h2>
+        <div class="col text-center mt-3">
+            <h2 class="main-heading-padding">{% trans "Password Reset" %}</h2>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    <div class="row">
+        <div class="col-4 offset-4 pb-5">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
     </div>
-</div>
-    
+
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
-    <p class="text-center">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+
+    <p class="text-center">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within
+        a few minutes.{% endblocktrans %}</p>
+</div>
 {% endblock %}
