--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -6,18 +6,20 @@
 
 {% block inner_content %}
 
-    <div class="container-fluid min-vh-100 w-100 p-0">
+<div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
-    <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">{% trans "Verify Your E-mail Address" %}</h2>
+        <div class="col text-center mt-3">
+            <h2 class="main-heading-padding">{% trans "Verify Your E-mail Address" %}</h2>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    <div class="row">
+        <div class="col-4 offset-4 pb-5">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
     </div>
+
+    <p class="text-center">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to
+        finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}
+    </p>
 </div>
-
-    <p class="text-center">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
-{% endblock %}
+    {% endblock %}
