--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -8,27 +8,28 @@
 
 <div class="container-fluid min-vh-100 w-100 p-0">
     <div class="row">
-    <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">{% trans "Verify Your E-mail Address" %}</h2>
+        <div class="col text-center mt-3">
+            <h2 class="main-heading-padding">{% trans "Verify Your E-mail Address" %}</h2>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    <div class="row">
+        <div class="col-4 offset-4 pb-5">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
     </div>
+
+    {% url 'account_email' as email_url %}
+
+    <p class="text-center">{% blocktrans %}This part of the site requires us to verify that
+        you are who you claim to be. For this purpose, we require that you
+        verify ownership of your e-mail address. {% endblocktrans %}</p>
+
+    <p class="text-center">{% blocktrans %}We have sent an e-mail to you for
+        verification. Please click on the link inside this e-mail. Please
+        contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+
+    <p class="text-center">{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your
+            e-mail address</a>.{% endblocktrans %}</p>
+
 </div>
-
-{% url 'account_email' as email_url %}
-
-<p class="text-center">{% blocktrans %}This part of the site requires us to verify that
-you are who you claim to be. For this purpose, we require that you
-verify ownership of your e-mail address. {% endblocktrans %}</p>
-
-<p class="text-center">{% blocktrans %}We have sent an e-mail to you for
-verification. Please click on the link inside this e-mail. Please
-contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
-<p class="text-center">{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
-
-
 {% endblock %}
