--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
 
     <title>Vision Furniture {% block extra_title %}{% endblock %}</title>
 </head>
+
 <body class="home-page">
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light navbar-style">
@@ -196,10 +197,12 @@
         <div class="container-fluid h-100 footer-style">
             <div class="row h-100">
                 <div class="col-7  my-auto">
-                    <a href="https://twitter.com/" class="social-icons" target="_blank"><i class="fab fa-facebook-square "></i></a>
+                    <a href="https://twitter.com/" class="social-icons" target="_blank"><i
+                            class="fab fa-facebook-square "></i></a>
                     <a class="social-icons" href="https://www.instagram.com/" target="_blank"><i
                             class="fab fa-instagram-square"></i></a>
-                    <a href="https://www.facebook.com/" class="social-icons" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.facebook.com/" class="social-icons" target="_blank"><i
+                            class="fab fa-twitter-square"></i></a>
                 </div>
                 <div class="col-5 my-auto text-right">
                     <button class="btns help-btn-style right">Need Help? <i class="fas fa-bullhorn"></i></button>
